Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2125

Tablet copy client does not retry on failures

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.4.0
    • 1.6.0
    • server
    • None

    Description

      The tablet copy client will fail a tablet copy operation if any of the block downloads fail, even if it's due to a ServiceUnavailable / backpressure error. This can cause a lot of needless retries to happen, which is extremely wasteful.

      Attachments

        Activity

          People

            danburkert Dan Burkert
            danburkert Dan Burkert
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: